[Fix] Editor scrollbar

--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -57,7 +57,7 @@
         border: none
         background: none
         appearance: none
-        text-align: right;
+        text-align: right
     
     &__about-nw
         float: left
