--- a/src/sass/pages/_editor.sass
+++ b/src/sass/pages/_editor.sass
@@ -185,6 +185,8 @@
         box-sizing: border-box
         overflow-x: hidden
         overflow-y: scroll
+        scrollbar-color: #262626 #151515
+        scrollbar-width: thin
 
         &__title
             user-select: none
